# picai_baseline

./: .gitattributes  .gitignore  README.md  nndetection_baseline.md  nnunet_baseline.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  unet_baseline.md
src/picai_baseline/: __init__.py  __main__.py  prepare_data.py  prepare_data_semi_supervised.py
src/picai_baseline/monai/: plan_overview.py  prepare_data.py  requirements.txt
src/picai_baseline/monai/training_docker/: export.sh  requirements.txt
src/picai_baseline/nndetection/training_docker/: Dockerfile  README.md  build.sh  export.sh  nndet_generate_detection_maps.py  nndetection_wrapper.py  requirements.txt  shutil_sol.py
src/picai_baseline/nnunet/: eval-cropped.py  eval.py  nnunet_baseline.py  softmax_export.py
src/picai_baseline/nnunet/training_docker/: CODEOWNERS  Dockerfile  build.sh  export.sh  focal_loss.py  io.py  nnUNetTrainerV2_Loss_CE_checkpoints.py  nnUNetTrainerV2_Loss_FL_and_CE.py  nnUNetTrainerV2_focalLoss.py  nnunet_wrapper.py  prepare_data.py  run_training.py
src/picai_baseline/nnunet_semi_supervised/: ensemble_predictions.py  eval.py  generate_automatic_annotations.py  resample_automatic_annotations.py
src/picai_baseline/nnunet_semi_supervised/automatic_annotation_metrics/: metrics-fold-0.json  metrics-fold-1.json  metrics-fold-2.json  metrics-fold-3.json  metrics-fold-4.json
src/picai_baseline/splits/: __init__.py
src/picai_baseline/unet/: Dockerfile  plan_overview.py  requirements.txt  train.py
tests/: Development-README.md  test_splits.py
(+83 files in other folders)
